--- a/proyecto-react/src/componentes/NavBar/NavBar.css
+++ b/proyecto-react/src/componentes/NavBar/NavBar.css
@@ -1,12 +1,33 @@
-header{
+header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid black;
+    width: 100%;
+    background-color: #3f51b56e;
+    height: 6rem;
+    padding: 5px 5%;
 }
 
-li{
+header h1 {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+
+li {
     display: inline-block;
     margin: 1rem;
     cursor: pointer;
+    padding: 0 20px;
+    transition: .4s;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+}
+
+li:hover {
+    color: black;
+    background-color: white;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, .7);
 }
