--- a/proyecto-react/src/index.css
+++ b/proyecto-react/src/index.css
@@ -1,4 +1,10 @@
 * {
-  margin: 1rem;
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  background-color: whitesmoke;
 }
