--- a/proyecto-react/src/componentes/ItemCount/ItemCount.css
+++ b/proyecto-react/src/componentes/ItemCount/ItemCount.css
@@ -14,17 +14,21 @@ button{
     width: 50px;
     background-color: #006db6;
     color: white;
+    
 
     border-radius: 10px;
     padding: 5px;
-    font-weight: bold;
+    font-weight: bolder;
 }
 .agregar{
-    width: 170px;
+    width: 200px;
     padding: 2px;
     margin-top: 5px;
-    font-weight: 500;
+    font-weight: 800;
+    font-size: 1rem;
     color: white;
+    height: 40px;
+
 }
 p{
     text-align: center;
